@@ -1273,6 +1273,7 @@ g_assertion_message_cmpnum
 g_assertion_message_cmpstr
 g_assertion_message_expr
 g_strcmp0
+g_test_add_data_func
 g_test_add_func
 g_test_add_vtable
 g_test_bug
